[tool.poetry]
name = "mlcube-platform-sdk"
version = "0.0.1"
description = "ML Platform Public SDK"
authors = ["MLcube"]
license = "Proprietary"
readme = "README.md"

[[tool.poetry.packages]]
include = "mlcube_platform_sdk"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = [ "py38",]
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 38
line_length = 79
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.poetry.dependencies]
python = ">=3.8.1, <3.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pylint = "^2.14.1"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.10.1"
flake8-black = "^0.3.3"
flake8-isort = "^6.0.0"
pytest-mock = "^3.8.2"